--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,4 @@
-
 MONGODB_URI='mongodb+srv://tiktok:Aa112233@cluster0.4ecyx29.mongodb.net/tiktok?retryWrites=true&w=majority&appName=Cluster0'
-JWT_SECRET=your-super-secret-jwt-key-change-this
 PORT=5000
-
+FRONTEND_URL='https://otogram.vercel.app'
 UPLOAD_PASSWORD=upload123
