--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "mongodb": "^6.20.0",
     "mongoose": "^7.0.0",
     "multer": "^2.0.0-rc.2"
+    "gridfs-stream": "^1.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
