--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "mongodb": "^6.20.0",
     "mongoose": "^7.0.0",
     "multer": "^2.0.0-rc.2",
-    "gridfs-stream": "^1.1.1"
+    "gridfs-stream": "^1.1.1",
+    "multer-gridfs-storage": "^5.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
