--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^6.20.0",
     "mongoose": "^7.0.0",
-    "multer": "^1.4.5-lts.1",
-    "gridfs-stream": "^1.1.1",
-    "multer-gridfs-storage": "^5.0.2"
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
