--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^6.20.0",
     "mongoose": "^7.0.0",
-    "multer": "1.4.5-lts.1", // ✨ التعديل هنا: تثبيت إصدار محدد
+    "multer": "1.4.5-lts.1",
     "multer-gridfs-storage": "^5.0.2"
   },
   "devDependencies": {
