--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,3 @@
-MONGODB_URI='mongodb+srv://tiktok:Aa112233@cluster0.4ecyx29.mongodb.net/tiktok?retryWrites=true&w=majority&appName=Cluster0'
-PORT=5000
-FRONTEND_URL='https://otogram.vercel.app'
+MONGODB_URI=mongodb+srv://tiktok:Aa112233@cluster0.4ecyx29.mongodb.net/tiktok?retryWrites=true&w=majority&appName=Cluster0
+FRONTEND_URL=https://otogram.vercel.app
 UPLOAD_PASSWORD=upload123
