--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 MONGODB_URI=mongodb+srv://tiktok:Aa112233@cluster0.4ecyx29.mongodb.net/tiktok?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=BBF97E37845B1CC966585B78BDF85
 FRONTEND_URL=https://otogram.vercel.app
 UPLOAD_PASSWORD=upload123
