--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
     "multer": "1.4.5-lts.1",
-    "multer-gridfs-storage": "^5.0.2"
+    "multer-gridfs-storage": "^5.0.2",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.3"
