--- a/frontend-vite/package.json
+++ b/frontend-vite/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@fontsource/cairo": "^5.2.7",
     "axios": "^1.3.0",
     "lucide-react": "^0.544.0",
     "react": "^18.3.1",
